Fixed paths to assets: can't anchor to root since it's prefixed with 'filterrific' when rendered on github.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     <footer>
       <p>&copy; {{ site.time | date: '%Y' }} <a href="http://clearcove.ca">ClearCove Software, Inc.</a></p>
     </footer>
-    <script src="/javascripts/scale.fix.js"></script>
+    <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
