Stubbed out gh-pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
+<div class='footer'>
+  <div class='container'>
+    <div class='muted' style='text-align: center; margin: 2em 0;'>
+      &copy; 2006 - {{ site.time | date: '%Y' }}
+      <a href="http://clearcove.ca">ClearCove&nbsp;Software,&nbsp;Inc.</a>
     </div>
-    <footer>
-      <p>&copy; {{ site.time | date: '%Y' }} <a href="http://clearcove.ca">ClearCove Software, Inc.</a></p>
-    </footer>
-    <script src="javascripts/scale.fix.js"></script>
-  </body>
-</html>
+  </div>
+</div>
