--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,11 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Filterrific</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    {% include google_analytics.html %}
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Filterrific</h1>
-        <p>The Rails ...</p>
-        <p class="view"><a href="http://github.com/jhund/filterrific">View the Project on GitHub <small>jhund/filterrific</small></a></p>
-        <ul>
-          <li><a href="/">Filterrific <strong>Start page</strong></a></li>
-          <li><a href="http://github.com/jhund/filterrific">View On <strong>GitHub</strong></a></li>
-          <li><a href="http://clearcove.ca">Visit <strong>Clearcove</strong></a></li>
-        </ul>
-      </header>
+<div class='header'>
+  <div class='container'>
+    <div class='pull-right muted hidden-phone'>
+      The Ruby on Rails experts
+    </div>
+    <div class='brand'>
+      <a href="/"><img alt="Logo_144" src="/images/logo_144.png" style="width: 32px;" /></a>
+      <a href="http://clearcove.ca" class="nowrap">ClearCove Software, Inc.</a>
+    </div>
+  </div>
+</div>
