--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,28 @@
-{% include header.html %}
-
-<section>
-  {{ content }}
-</section>
-
-{% include footer.html %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <title>The Ruby on Rails experts - ClearCove Software, Inc.</title>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <link href="/stylesheets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
+    <!--[if lt IE 9]>
+      <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
+    <![endif]-->
+    <link href='/favicon.ico' rel='shortcut icon'>
+    {% include google_analytics.html %}
+  </head>
+  <body>
+    {% include header.html %}
+    <div class='page-content'>
+      <div class='container'>
+        <div class='row'>
+          <div class='span10 offset1'>
+            {{ content }}
+          </div>
+        </div>
+      </div>
+    </div>
+    {% include footer.html %}
+    <script src="/javascripts/application.js" type="text/javascript"></script>
+  </body>
+</html>
