Need to include stylesheet for code highlighting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <title>The Ruby on Rails experts - ClearCove Software, Inc.</title>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <link href="/stylesheets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/pygment_trac.css" media="all" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]>
       <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
     <![endif]-->
