Added source link

--- a/_includes/project_navigation.html
+++ b/_includes/project_navigation.html
@@ -6,5 +6,6 @@
     <li><a href="/pages/active_record_model_api.html">Model API</a></li>
     <li><a href="/pages/active_record_scope_patterns.html">ActiveRecord scope patterns</a></li>
     <li><a href="/pages/saved_searches.html">Saved searches</a></li>
+    <li><a href="https://github.com/jhund/filterrific">Source on Github</a></li>
   </ul>
 </div>
