Added example application

--- a/_includes/project_navigation.html
+++ b/_includes/project_navigation.html
@@ -1,11 +1,12 @@
-<div class="well pull-right">
-  <ul class="unstyled">
+<div class="marginalia_right">
+  <ul class="unstyled well">
     <li><a href="/">Filterrific</a></li>
     <li><a href="/pages/action_controller_api.html">Controller API</a></li>
     <li><a href="/pages/action_view_api.html">View API</a></li>
     <li><a href="/pages/active_record_model_api.html">Model API</a></li>
     <li><a href="/pages/active_record_scope_patterns.html">ActiveRecord scope patterns</a></li>
     <li><a href="/pages/saved_searches.html">Saved searches</a></li>
+    <li><a href="/pages/example_application.html">Example application</a></li>
     <li><a href="https://github.com/jhund/filterrific">Source on Github</a></li>
   </ul>
 </div>
