Fleshed out documentation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <div class='brand'>
       <a href="/"><img alt="Logo_144" src="/images/logo_144.png" style="width: 32px;" /></a>
       <a href="http://clearcove.ca" class="nowrap">ClearCove Software, Inc.</a>
+      :: Filterrific
     </div>
   </div>
 </div>
