--- a/_includes/project_navigation.html
+++ b/_includes/project_navigation.html
@@ -5,8 +5,6 @@
     <li><a href="/pages/active_record_model_api.html">Model API</a></li>
     <li><a href="/pages/action_controller_api.html">Controller API</a></li>
     <li><a href="/pages/action_view_api.html">View API</a></li>
-    <li><a href="/pages/active_record_scope_patterns.html">ActiveRecord scope patterns</a></li>
-    <li><a href="/pages/saved_searches.html">Saved searches</a></li>
-    <li><a href="https://github.com/jhund/filterrific">Source on Github</a></li>
+    <li><a href="/pages/active_record_scope_patterns.html">Scope patterns</a></li>
   </ul>
 </div>
