--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>The Ruby on Rails experts - ClearCove Software, Inc.</title>
+    <title>Filterrific - ClearCove Software, Inc.</title>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/pygment_trac.css" media="all" rel="stylesheet" type="text/css" />
