--- a/_includes/project_navigation.html
+++ b/_includes/project_navigation.html
@@ -1,6 +1,6 @@
 <div class="marginalia_right">
   <ul class="unstyled well">
-    <li><a href="/">Filterrific</a></li>
+    <li><a href="/">Start page</a></li>
     <li><a href="/pages/example_application.html">Example application</a></li>
     <li><a href="/pages/active_record_model_api.html">Model API</a></li>
     <li><a href="/pages/action_controller_api.html">Controller API</a></li>
